--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/image": "^1.5.0",
     "fp-ts": "^2.16.5",
     "io-ts": "^2.2.21",
     "nuxt": "^3.11.1",
